# lstk-dataset

./: .gitignore  .pre-commit-config.yaml  README.md  aggregate.ipynb  aggregate.py  config.yaml  get_metadata.py  make_dataset.ipynb  make_dataset.py  pipeline.sh  pyproject.toml
docs/: schema.yaml
docs/schemas/: affiliations.yaml  authors.yaml  citing_aggregated.yaml  collab.yaml  papers.yaml
notebooks/: postprocess.ipynb  walks.ipynb
src/: aggregate.py  get_metadata.py
