[project]
name = "lstk-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "ibis>=3.3.0",
    "ibis-framework[duckdb]>=9.5.0",
    "jupyterlab>=4.3.5",
    "nbconvert>=7.16.6",
    "numpy>=2.2.2",
    "omegaconf>=2.3.0",
    "tqdm>=4.67.1",
]
